// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`course should have empty tags if not found 1`] = `
Object {
  "primary": Object {},
  "secondary": Object {},
}
`;

exports[`course should parse grades (evaluación) section 1`] = `
"<ul>
<li><strong>Ejercicios</strong>: Durante el curso completarás varios ejercicios en el LMS.
Estos ejercicios incluyen tests automatizados con la intención de dar feedback
immediato, pero los ejercicios en sí no serán calificados. Se elegirá uno o
dos ejercicios junto con el proyecto para la sesión de <em>code review</em>, que sí
será calificada.</li>
<li><strong>Cuestionarios</strong>: Al igual que los ejercicios, a lo largo del curso
responderás varios cuestionarios con feedback immediato, y éstos no cuentan
para la nota final.</li>
<li><strong>Proyecto</strong>: Antes de la sesión de <em>code review</em> y las demos, cada alumna
debe entregar (via pull request) el código de su proyecto. El proyecto incluye
refactorizar varios módulos de una base de código existente.</li>
<li><strong>Code review</strong>: <strong>(50%)</strong> La última semana del curso tendrás una sesión de
<em>code review</em> con uno de lxs instructorxs. En esta sesión se revisará el
código del proyecto así como uno o dos ejercicios realizados durante el curso.</li>
<li><strong>Demo</strong>: <strong>(50%)</strong> El curso cerrará con una demo en la que tendrás que
presentar al resto de la clase el trabajo realizado y lo aprendido en el
proyecto.</li>
</ul>
"
`;

exports[`course should parse with target audience 1`] = `
Object {
  "primary": Object {
    "bar": true,
    "baz": true,
    "foo": true,
  },
  "secondary": Object {},
}
`;

exports[`course should parse with target audience 2`] = `
"<p>Este curso está dirigido a desarrolladoras tanto <em>front-end</em> como <em>back-end</em>.
JavaScript es un lenguaje de naturaleza funcional. En este curso aprenderás
sobre los principios de la programación funcional y cómo se reflejan en
JavaScript moderno.</p>
"
`;

exports[`course should read main and secondary tags 1`] = `
Object {
  "primary": Object {
    "bar": true,
    "baz": true,
    "foo": true,
  },
  "secondary": Object {
    "one": true,
    "three": true,
    "two": true,
  },
}
`;

exports[`course should read primary (default) tags 1`] = `
Object {
  "primary": Object {
    "bar": true,
    "baz": true,
    "foo": true,
  },
  "secondary": Object {},
}
`;

exports[`course should trim <hr> from html fragments 1`] = `
"<ul>
<li>Refactorizar juego usado en lección 9 usando principios de programación
funcional, ES6 y añadiendo un conjunto de pruebas.</li>
<li>El &quot;proyecto&quot; está basado en iterar una aplicación existente y llevar a cabo
su siguiente release usando metodología ágil.</li>
</ul>
"
`;
